Fix problems with text in box borders.
Since a few commits, borders are positioned absolutely and moved out of the box.
This way, they are not part of the usual flow like they were before, where theor
original (before relative and top/bottom) position provided a padding.

Re-adding this padding solves the problem.

--- a/src/herobase/static/less/style.less
+++ b/src/herobase/static/less/style.less
@@ -10,6 +10,7 @@
 @cut-corner-radius: 12px;
 .cut-corners-bottom(@color, @radius: @cut-corner-radius) {
   padding: 0;
+  padding-bottom: @cut-corner-radius;
   margin-bottom: @cut-corner-radius;
   position: relative;
   &:after {
@@ -31,6 +32,7 @@
 }
 .cut-corners-top(@color, @radius: @cut-corner-radius) {
   padding: 0;
+  padding-top: @cut-corner-radius;
   margin-top: @cut-corner-radius;
   position: relative;
   &:before {
